# pokemon-save-file-container

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Gen1.cpp  Gen1.h  PokemonSave.cpp  README.md
PokemonSave/: CMakeLists.txt  Gen1.cpp  Gen1.h  Gen1Items.h  Gen1Moves.h  Gen1Pokemon.h  PokemonSave.cpp  PokemonShowdown.h  wxPokemon.cpp  wxPokemon.h
